--- a/projeto_at/01home.html
+++ b/projeto_at/01home.html
@@ -29,7 +29,7 @@
                             <a class="nav-link text-white" href="02destino.html">Destino</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="03promocoes.html">Promoções</a>
+                            <a class="nav-link text-white" href="03promoções.html">Promoções</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="04contatos.html">Contatos</a>
