--- a/projeto_at/02destino.html
+++ b/projeto_at/02destino.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nattur Home</title>
+    <title>nattur Destino</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css/doc.css">
     
@@ -28,7 +28,7 @@
                             <a class="nav-link text-white" href="02destino.html">Destino</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="03promocoes.html">Promoções</a>
+                            <a class="nav-link text-white" href="03promoções.html">Promoções</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="04contatos.html">Contatos</a>
