--- a/projeto_at/05oferta.html
+++ b/projeto_at/05oferta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nattur Home</title>
+    <title>nattur Ofertas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css/doc.css">
     
@@ -29,7 +29,7 @@
                             <a class="nav-link text-white" href="02destino.html">Destino</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="03promocoes.html">Promoções</a>
+                            <a class="nav-link text-white" href="03promoções.html">Promoções</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="04contatos.html">Contatos</a>
@@ -47,11 +47,10 @@
 
 <main>
     <div class="container mt-4">
-    <h1 class="text-primeiro">Descubra o mundo</h1>
-    <h2 class="text-primeiro">Bem-vindo à nattur, a agência de viagens online</h2>
+    <h1 class="text-primeiro">Ofertas imperdíveis</h1>
+    <h2 class="text-primeiro">Bem-vindo à nattur, </h2>
     <p class="text-segundo">
-        Explore o mundo conosco e descubra o extraordinário em cada canto do planeta.
-            Junte-se a nós para conhecer sua próxima grande aventura. Transforme seu sonho de viajar em realidade com um clique!
+          Ofertas Exclusivas para voce 
     </p>
     <h4 class="text-primeiro">A jornada dos seus sonhos começa aqui</h4>
     <br>
